--- a/components/aboutus.html
+++ b/components/aboutus.html
@@ -37,7 +37,7 @@
         <div class="about-content">
             <div class="person-card">
                 <div class="card-inner">
-                    <img src="/images/Satish.jpg" alt="Founder" class="person-image">
+                    <img src="/images/Satish.JPG" alt="Founder" class="person-image">
                     <h3>Dr. Satish S. Savant<br>(Founder)</h3>
                     <p class="summary">Dr. Satish S. Savant is the esteemed founder and director of the Humanitarian Clinic: Skin, Hair, and Laser Centre in Mumbai.</p>
                     <a href="/components/founder-details.html" class="btn">Read More</a>
