--- a/components/specialty.html
+++ b/components/specialty.html
@@ -93,29 +93,31 @@
         </div>
     </div>
 
-    <footer>
+        <footer>
         <div class="footer-container">
             <div class="working-hours fade-in">
                 <h4>Operating Hours</h4>
                 <ul>
                     <li>
-                        <span>Monday - Friday:</span>
-                        <div class="timing">
-                            <div><strong>Morning:</strong> 8:30 AM - 1:00 PM</div>
-                            <div><strong>Evening:</strong> 4:00 PM - 7:30 PM</div>
-                        </div>
+                        <span>Monday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
                     </li>
                     <li>
-                        <span>Saturday:</span>
-                        <div class="timing">
-                            <div>Closed</div>
-                        </div>
+                        <span>Tuesday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
                     </li>
                     <li>
-                        <span>Sunday:</span>
-                        <div class="timing">
-                            <div>Closed</div>
-                        </div>
+                        <span>Wednesday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
+                    </li>
+                    <li>
+                        <span>Thursday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
+                    </li>
+                    <li>
+                        <span>Friday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
+                    </li>
+                    <li>
+                        <span>Saturday:</span> <div class="timing">Closed</div>
+                    </li>
+                    <li>
+                        <span>Sunday:</span> <div class="timing">Closed</div>
                     </li>
                 </ul>
             </div>
@@ -130,7 +132,7 @@
         </div>
 
         <div class="footer-bottom fade-in">
-            <p>&copy; Made By S & M 2024</p>
+            <p>&copy; 2024 Made By S & M </p>
         </div>
     </footer>
     
