--- a/components/director-details.html
+++ b/components/director-details.html
@@ -34,7 +34,7 @@
 
     <div class="director-section">
         <div class="director-image">
-            <img src="/images/1.jpg" alt="Director of Hospital" />
+            <img src="/images/1.JPG" alt="Director of Hospital" />
         </div>
         <div class="director-info">
             <h2>About the Chief Consultant: Dr. Sushil S. Savant</h2>
