--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -500,6 +500,7 @@ footer {
         flex-direction: column;
         align-items: center; /* Center the image */
         text-align: center; /* Center text in the description */
+        margin-top: 70px;
     }
 
     .founder-image img {
