--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -465,6 +465,7 @@ footer {
     .about-content {
         flex-direction: column;
         align-items: center;
+        margin-top: 70px;
     }
     
     .person-card {
