--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -853,6 +853,7 @@ footer {
     margin-bottom: 1em;
     font-weight: bold;
     animation: fadeIn 1.2s ease;
+    margin-top: 70px;
 }
 
 .section {
