--- a/components/specialty.html
+++ b/components/specialty.html
@@ -24,7 +24,7 @@
                         <li><a href="/index.html">Home</a></li>
                         <li><a href="/components/aboutus.html">About Us</a></li>
                         <li><a href="/components/treatment.html">Treatments</a></li>
-                        <li><a href="/components/specialty.html">Speciality</a></li>
+                        <li><a href="/components/specialty.html">Specialist</a></li>
                         <li><a href="/components/contactus.html">Contact Us</a></li>
                     </ul>
                 </nav>
@@ -34,7 +34,7 @@
 
 
     <section class="section">
-        <h2 class="section-title">Specialty</h2>
+        <h2 class="section-title">Specialist</h2>
         <div class="specialties-container">
             <div class="specialty-card" onclick="openModal('Dermatology')">
                 <h3>Dermatology, Venereology, and Leprosy</h3>
