--- a/components/treatment.html
+++ b/components/treatment.html
@@ -24,7 +24,7 @@
                         <li><a href="/index.html">Home</a></li>
                         <li><a href="/components/aboutus.html">About Us</a></li>
                         <li><a href="/components/treatment.html">Treatments</a></li>
-                        <li><a href="/components/specialty.html">Speciality</a></li>
+                        <li><a href="/components/specialty.html">Specialist</a></li>
                         <li><a href="/components/contactus.html">Contact Us</a></li>
                     </ul>
                 </nav>
