--- a/components/contactus.html
+++ b/components/contactus.html
@@ -106,7 +106,7 @@
         </div>
 
         <div class="footer-bottom fade-in">
-            <p>&copy; 2024 Made By S & M </p>
+            <p>&copy; The Humanitarian Clinic 2024</p>
         </div>
     </footer>
 </body>
