--- a/components/director-details.html
+++ b/components/director-details.html
@@ -107,7 +107,7 @@
         </div>
 
         <div class="footer-bottom fade-in">
-            <p>&copy; 2024 Made By S & M </p>
+            <p>&copy;The Humanitarian Clinic 2024</p>
         </div>
     </footer>
     
