--- a/components/aboutus.html
+++ b/components/aboutus.html
@@ -59,7 +59,7 @@
         
         <!-- Hospital Information -->
         <div class="hospital-info">
-            <h3>Our Hospital</h3>
+            <h3>Our Clinic</h3>
             <p>The Humanitarian Clinic: Skin, Hair, and Laser Center is dedicated to providing top-quality dermatological and aesthetic care, with a focus on compassion, expertise, and innovation. Established in 1989, we specialize in advanced treatments for skin and hair, equipped with state-of-the-art technology in laser and aesthetic medicine.</p>
             
             <div class="hospital-mission">
