--- a/components/founder-details.html
+++ b/components/founder-details.html
@@ -14,15 +14,17 @@
     <header id="header">
         <div class="navbar">
             <div class="navbar-left">
-                <a href="/index.html"><img src="/images/logo1.png" alt="The Humanitarian Clinic Logo" class="logo"></a>
-                <a href="/index.html"><h1>THE HUMANITARIAN CLINIC :</h1>
-                <h2 class="navbar-title">SKIN, HAIR & LASER CENTRE</h2></a>
+                <a href="#"><img src="images/logo1.png" alt="The Humanitarian Clinic Logo" class="logo"></a>
+                <a href="#" class="navbar-text">
+                    <h1>THE HUMANITARIAN CLINIC :</h1>
+                    <h2 class="navbar-title">SKIN, HAIR & LASER CENTRE</h2>
+                </a>
             </div>
             <div class="navbar-right">
                 <button class="menu-toggle" onclick="toggleMenu()">☰</button> <!-- Menu icon for mobile -->
                 <nav id="nav-menu" class="hidden">
                     <ul>
-                        <li><a href="/index.html">Home</a></li>
+                        <li><a href="#">Home</a></li>
                         <li><a href="/components/aboutus.html">About Us</a></li>
                         <li><a href="/components/treatment.html">Treatments</a></li>
                         <li><a href="/components/specialty.html">Specialist</a></li>
