--- a/components/contactus.html
+++ b/components/contactus.html
@@ -13,7 +13,7 @@
 <header id="header">
         <div class="navbar">
             <div class="navbar-left">
-                <a href="#"><img src="images/logo1.png" alt="The Humanitarian Clinic Logo" class="logo"></a>
+                <a href="#"><img src="/images/logo1.png" alt="The Humanitarian Clinic Logo" class="logo"></a>
                 <a href="#" class="navbar-text">
                     <h1>THE HUMANITARIAN CLINIC :</h1>
                     <h2 class="navbar-title">SKIN, HAIR & LASER CENTRE</h2>
