--- a/components/founder-details.html
+++ b/components/founder-details.html
@@ -24,7 +24,7 @@
                 <button class="menu-toggle" onclick="toggleMenu()">☰</button> <!-- Menu icon for mobile -->
                 <nav id="nav-menu" class="hidden">
                     <ul>
-                        <li><a href="#">Home</a></li>
+                        <li><a href="/index.html">Home</a></li>
                         <li><a href="/components/aboutus.html">About Us</a></li>
                         <li><a href="/components/treatment.html">Treatments</a></li>
                         <li><a href="/components/specialty.html">Specialist</a></li>
