--- a/components/treatment.html
+++ b/components/treatment.html
@@ -24,6 +24,7 @@
                 <nav id="nav-menu" class="hidden">
                     <ul>
                         <li><a href="/index.html">Home</a></li>
+                        <li><a href="/components/gallery.html">Gallery</a></li>
                         <li><a href="/components/aboutus.html">About Us</a></li>
                         <li><a href="/components/treatment.html">Treatments</a></li>
                         <li><a href="/components/specialty.html">Specialist</a></li>
