--- a/components/aboutus.html
+++ b/components/aboutus.html
@@ -44,7 +44,7 @@
                     <img src="/images/Satish.JPG" alt="Founder" class="person-image">
                     <h3>Dr. Satish S. Savant<br>(Founder)</h3>
                     <p class="summary">Dr. Satish S. Savant is the esteemed founder and director of the Humanitarian Clinic: Skin, Hair, and Laser Centre in Mumbai.</p>
-                    <a href="/components/founder-details.html" class="btn">Read More</a>
+                    <a href="/components/founder-details.html" class="action-button">Read More</a>
                 </div>
             </div>
             <div class="person-card">
@@ -52,7 +52,7 @@
                     <img src="/images/2.JPG" alt="Director" class="person-image">
                     <h3>Dr. Sushil S. Savant<br>(Director)</h3>
                     <p class="summary">Dr. Sushil S. Savant serves as the chief consultant dermatosurgeon at The Humanitarian Clinic: Skin, Hair, and Laser Centre in Mumbai</p>
-                    <a href="/components/director-details.html" class="btn">Read More</a>
+                    <a href="/components/director-details.html" class="action-button">Read More</a>
                 </div>
             </div>
         </div>
