--- a/components/gallery.html
+++ b/components/gallery.html
@@ -74,20 +74,25 @@
         <h2>Equipments</h2>
         <p>Explore our cutting-edge equipment and tools.</p>
         <div class="gallery-grid">
-            <img src="/images/gallery/11.jpg" alt="Image 11" class="gallery-image" onclick="openImage(this)">
-            <img src="/images/gallery/12.jpg" alt="Image 12" class="gallery-image" onclick="openImage(this)">
-            <img src="/images/gallery/13.jpg" alt="Image 13" class="gallery-image" onclick="openImage(this)">
-            <img src="/images/gallery/14.jpg" alt="Image 14" class="gallery-image" onclick="openImage(this)">
-            <img src="/images/gallery/15.jpg" alt="Image 15" class="gallery-image" onclick="openImage(this)">
-            <img src="/images/gallery/16.jpg" alt="Image 16" class="gallery-image" onclick="openImage(this)">
-            <img src="/images/gallery/17.jpg" alt="Image 17" class="gallery-image" onclick="openImage(this)">
-            <img src="/images/gallery/18.jpg" alt="Image 18" class="gallery-image" onclick="openImage(this)">
-            <img src="/images/gallery/19.jpg" alt="Image 19" class="gallery-image" onclick="openImage(this)">
-            <img src="/images/gallery/20.jpg" alt="Image 20" class="gallery-image" onclick="openImage(this)">
-            <img src="/images/gallery/21.jpg" alt="Image 21" class="gallery-image" onclick="openImage(this)">
-            <img src="/images/gallery/22.jpg" alt="Image 22" class="gallery-image" onclick="openImage(this)">
-            <img src="/images/gallery/23.jpg" alt="Image 23" class="gallery-image" onclick="openImage(this)">
-
+            
+            <img src="/images/1.jpg" alt="Image 1" class="gallery-image" onclick="openImage(this)">
+            <img src="/images/2.jpg" alt="Image 2" class="gallery-image" onclick="openImage(this)">
+            <img src="/images/3.jpg" alt="Image 3" class="gallery-image" onclick="openImage(this)">
+            <img src="/images/4.jpg" alt="Image 4" class="gallery-image" onclick="openImage(this)">
+            <img src="/images/5.jpg" alt="Image 5" class="gallery-image" onclick="openImage(this)">
+            <img src="/images/6.jpg" alt="Image 6" class="gallery-image" onclick="openImage(this)">
+            <img src="/images/7.jpg" alt="Image 7" class="gallery-image" onclick="openImage(this)">
+            <img src="/images/8.jpg" alt="Image 8" class="gallery-image" onclick="openImage(this)">
+            <img src="/images/9.jpg" alt="Image 9" class="gallery-image" onclick="openImage(this)">
+            <img src="/images/10.jpg" alt="Image 10" class="gallery-image" onclick="openImage(this)">
+            <img src="/images/24.jpg" alt="Image 24" class="gallery-image" onclick="openImage(this)">
+            <img src="/images/25.jpg" alt="Image 25" class="gallery-image" onclick="openImage(this)">
+            <img src="/images/26.jpg" alt="Image 26" class="gallery-image" onclick="openImage(this)">
+            <img src="/images/27.jpg" alt="Image 27" class="gallery-image" onclick="openImage(this)">
+            <img src="/images/28.jpg" alt="Image 28" class="gallery-image" onclick="openImage(this)">
+            <img src="/images/29.jpg" alt="Image 29" class="gallery-image" onclick="openImage(this)">
+            <img src="/images/30.jpg" alt="Image 30" class="gallery-image" onclick="openImage(this)">
+            <img src="/images/31.jpg" alt="Image 31" class="gallery-image" onclick="openImage(this)">
         </div>
     </section>
     
