--- a/components/director-details.html
+++ b/components/director-details.html
@@ -37,7 +37,7 @@
 
     <div class="director-section">
         <div class="director-image">
-            <img src="/images/1.JPG" alt="Director of Hospital" />
+            <img src="/images/DrSushil.jpg" alt="Director of Hospital" />
         </div>
         <div class="director-info">
             <h2>About the Chief Consultant: Dr. Sushil S. Savant</h2>
