--- a/components/founder-details.html
+++ b/components/founder-details.html
@@ -38,7 +38,7 @@
 
     <div class="founder-section">
     <div class="founder-image">
-        <img src="/images/Satish1.jpg" alt="Founder of Hospital" />
+        <img src="/images/Dr Satish.jpg" alt="Founder of Hospital" />
     </div>
     <div class="founder-info">
         <h2>About the Founder : Dr. Satish S. Savant</h2>
